Scrollbar fixens

--- a/app/stylesheets/UI.css.less
+++ b/app/stylesheets/UI.css.less
@@ -1,6 +1,6 @@
 @import "/app/stylesheets/mixins.css.less";
 
-html,body { background: #00070b url(/images/blue_gradient.png) no-repeat; }
+html,body { background: #00070b url(/images/blue_gradient.png) fixed no-repeat; }
 
 
 .container {
