--- a/app/stylesheets/criteria.css.less
+++ b/app/stylesheets/criteria.css.less
@@ -2,11 +2,11 @@
 
 #criteria {
   overflow : hidden;
-  position : absolute;
+  position : fixed;
   top      : 0;
   bottom   : 0;
-  left     : 15px;
   width    : 503px;
+  margin-left : 15px;
 }
 
 #adaptive_path {
